@@ -41,6 +41,7 @@ SVN trunk:
    * campaign_list response now contains the time the request was processed
    * campaign_list response now contains information about translations
  * utils: added weblist.pl and webtgz.pl web interface programs
+   * I updated weblist.pl to display translation information
 
 Version 1.0rc1:
  * language and i18n:
